--- a/roles/install_memcached/templates/memcached.j2
+++ b/roles/install_memcached/templates/memcached.j2
@@ -2,4 +2,4 @@ PORT="11211"
 USER="memcached"
 MAXCONN="1024"
 CACHESIZE="64"
-OPTIONS="-l {{ ansible_eth0.ipv4.address }}"
+OPTIONS="-l {{ MGNT_IP }}"
