--- a/roles/install_placement/templates/placement.conf.j2
+++ b/roles/install_placement/templates/placement.conf.j2
@@ -5,7 +5,7 @@ auth_strategy = keystone
 [keystone_authtoken]
 www_authenticate_uri = http://{{ IP_VIP }}:5000
 auth_url = http://{{ IP_VIP }}:5000/v3
-memcached_servers = {%- for item in groups['controller'] %}{{  hostvars[item].ansible_default_ipv4.address }}:11211{% if not loop.last %},{% endif %}{% endfor %}
+memcached_servers = {%- for item in groups['controller'] %}{{  hostvars[item]['ansible_' + MGNT_IF]['ipv4']['address'] }}:11211{% if not loop.last %},{% endif %}{% endfor %}
 
 auth_type = password
 project_domain_name = Default
