--- a/roles/install_glance/templates/glance-api.conf.j2
+++ b/roles/install_glance/templates/glance-api.conf.j2
@@ -1,5 +1,8 @@
 [DEFAULT]
 bind_host = {{ MGNT_IP }}
+bind_port = 9292
+show_image_direct_url = True
+show_multiple_locations = true
 [cinder]
 [cors]
 [database]
