--- a/roles/install_cinder/templates/cinder.conf.j2
+++ b/roles/install_cinder/templates/cinder.conf.j2
@@ -1,25 +1,12 @@
 [DEFAULT]
-bind_host = {{ MGNT_IP }}
-bind_port = 8776
 my_ip = {{ MGNT_IP }}
+osapi_volume_listen = {{ MGNT_IP }}
+osapi_volume_port = 8776
 transport_url = rabbit://{%- for item in groups['controller'] %}openstack:{{ rabbitmq_pass }}@{{  hostvars[item]['ansible_' + MGNT_IF]['ipv4']['address'] }}:5672{% if not loop.last %},{% endif %}{% endfor %}
 
 auth_strategy = keystone
-osapi_volume_listen = {{ MGNT_IP }}
-osapi_volume_listen_port = 8776
-glance_api_version = 2
-glance_api_servers = http://{{ IP_VIP }}:9292
-enabled_backends = {%- if enable_lvm | bool %}lvm{% endif %}
+notification_driver =  messagingv2
 [backend]
-{% if enable_lvm | bool %}
-[lvm]
-volume_driver = cinder.volume.drivers.lvm.LVMVolumeDriver
-volume_group = cinder-volumes
-volume_backend_name = lvm
-iscsi_helper = tgtadm
-iscsi_protocol = iscsi 
-{% endif %}
-
 [backend_defaults]
 [barbican]
 [brcd_fabric_example]
@@ -50,6 +37,8 @@ lock_path = /var/lib/cinder/tmp
 [oslo_messaging_amqp]
 [oslo_messaging_kafka]
 [oslo_messaging_notifications]
+transport_url = rabbit://{%- for item in groups['controller'] %}openstack:{{ rabbitmq_pass }}@{{  hostvars[item]['ansible_' + MGNT_IF]['ipv4']['address'] }}:5672{% if not loop.last %},{% endif %}{% endfor %}
+
 [oslo_messaging_rabbit]
 rabbit_retry_interval = 1
 rabbit_retry_backoff = 2
