--- a/roles/install_glance/templates/glance-api.conf.j2
+++ b/roles/install_glance/templates/glance-api.conf.j2
@@ -1,6 +1,7 @@
 [DEFAULT]
 bind_host = {{ MGNT_IP }}
 bind_port = 9292
+registry_host = {{ IP_VIP }}
 show_image_direct_url = True
 show_multiple_locations = true
 [cinder]
